--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
         <title> Landing Page</title>
     </head>
     <body>
         <div class="header">
-            <div class="header-logo">Header Logo</div>
+            <div class="header-logo">
+                <p>Header Logo</p>
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
             <div class="websitegreat">
                 <div class="header-wording">This website is awesome</div>
                 <div class="text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
@@ -44,7 +52,7 @@
             </div>
         </div>
 
-        <div class="content-blow-three">
+        <div class="content-block-three">
             <div class="call-to-action">
                 <p>Call to action! It's time!</p>
                 <p>Sign up for our product by clicking tat button right over threre</p>
