--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
                 </ul>
             </div>
             <div class="websitegreat">
-                <div class="header-wording">This website is awesome</div>
-                <div class="text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
-                <button>Sign up</button>
-            <div class="place-holder">This is a placeholder for an image</div>    
+                <div class="verbose-container">
+                    <div class="header-wording">This website is awesome</div>
+                    <div class="text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
+                    <button>Sign up</button>
+                </div>    
+                <div class="place-holder">This is a placeholder for an image</div>    
             </div>
         </div>
 
